<resources>
    <string name="app_name">Animal Health</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="bookings">Bookings</string>
    <string name="home">Home</string>
    <string name="book_doctor">Book a Doctor \n Appointment</string>
    <string name="post_text">post text</string>
    <string name="date">Date</string>
    <string name="post_image">postImage</string>
    <string name="doctors">Doctors</string>
    <string name="book_an_appointment">Book An Appointment</string>
    <string name="available">Available From</string>
    <string name="next_button">next button</string>
    <string name="exit">exit</string>
    <string name="book_an_appointment_v2">Book An Appointment</string>
    <string name="new_to_animal_health">New to Animal Health?</string>
    <string name="verify_mobile_number">Verify Mobile Number</string>
    <string name="timer">1:30</string>
    <string name="send_code">Send Code</string>
    <string name="enter_the_4_digit_code_below">Enter the 4 digit code below</string>
    <string name="code_sent_to">Code Sent to:</string>
    <string name="PhoneTv">+20106 846 2870</string>
    <string name="the_code_will_be_expired_in">The code will be expired in:</string>
    <string name="or">OR</string>
    <string name="phone_number_TV">Phone number</string>
    <string name="login">Login</string>
    <string name="skip">Skip</string>
    <string name="create_an_account">Create an account</string>
    <string name="passwordTV">Password</string>
    <string name="search">search</string>
    <string name="back">Back</string>
    <string name="references">References</string>
    <string name="register">Register</string>
    <string name="title">title</string>
    <string name="search_data">Search Data</string>
    <string name="message">Message</string>
    <string name="fees">fees</string>
    <string name="join_the_call">Join The Call</string>
    <string name="march_22nd_8_30_pm">March 22nd | 8:30 PM</string>
    <string name="booking_date">Booking Date</string>
    <string name="pets">Pets</string>
    <string name="previous">Previous</string>
    <string name="starting_soon">Starting Soon</string>
    <string name="upcoming">UpComing</string>
    <string name="previous_bookings">Previous Bookings</string>
    <string name="no_data_found">No Data Found</string>
    <string name="refresh">Refresh</string>
</resources>